@@ -51,7 +51,7 @@ public class IntroModule extends GlaciersModule {
         setSimulationPanel( _playArea );
 
         // Put our control panel where the clock control panel normally goes
-        _controlPanel = new IntroControlPanel( _model, _playArea, dialogOwner, this );
+        _controlPanel = new IntroControlPanel( _model, _playArea, dialogOwner, this, GlaciersConstants.DEFAULT_TO_ENGLISH_UNITS );
         setClockControlPanel( _controlPanel );
         
         // Help
